feat(team): add team name editing
